--- a/views/layout/_header.ejs
+++ b/views/layout/_header.ejs
@@ -153,9 +153,9 @@
 	</div>
 </nav>
 <div id="link-dropdown" class="link-dropdown list">
-	<a class="item ajax list" href="/repair-flat">Квартир</a>
-	<a class="item ajax list" href="/repair-house">Домов</a>
-	<a class="item ajax list" href="/repair-estate">Комерчиской недвижемости</a>
+	<a class="item ajax mobile-item list" href="/repair-flat">Квартир</a>
+	<a class="item ajax mobile-item list" href="/repair-house">Домов</a>
+	<a class="item ajax mobile-item list" href="/repair-estate">Комерчиской недвижемости</a>
 </div>
 
 <div id="fixed-links" class="fixed-link-box link-box">
