Fixed node-modules removed exses mod

--- a/views/layout/_footer.ejs
+++ b/views/layout/_footer.ejs
@@ -9,7 +9,7 @@
             "Ремонт Под Ключ" – дизайн интерьеров, строительство, ремонт и отделка квартир, домов, офисов и других коммерческих помещений.
         </p>
         <p class="privacy p-3">
-            © 2021. Все права защищены. Вся информация, изложенная на сайте,
+            © <%- new Date().getFullYear() %>. Все права защищены. Вся информация, изложенная на сайте,
              не является публичной офертой, определенной в <a style="border-radius: 10px; color: white;" target="_blank" href="https://pravo.by/">ст. 407 ГК РБ.</a>
         </p>
     </div>
