--- a/views/error.ejs
+++ b/views/error.ejs
@@ -3,17 +3,16 @@
     <head>
         <meta charset="utf-8">
         <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Semi+Condensed:100,200,300,400" rel="stylesheet">
-        <link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
-        <link href="css/error.css" rel="stylesheet">
+        <link rel="icon" type="image/png" href="favicon.ico"/>
+        <link href="stylesheets/error.css" rel="stylesheet">
         <title>error</title>
     </head> 
     <body class="loading">
         <h2>Упс 😭</h2>
         <h3>Что то поршло не так</h3>
-        <h4><%= message %></h4>
-        <h5><%= error.status %></h5>
-        <pre><%= error.stack %></pre>
-        <div class="gears">
+        <h4><%= message %> <%= error.status %></h4>
+        <pre style="margin-bottom: 30px;" ><%= error.stack %></pre>
+        <div  class="gears">
             <div class="gear one">
                 <div class="bar"></div>
                 <div class="bar"></div>
