added email sender

--- a/emails/templates/html.ejs
+++ b/emails/templates/html.ejs
@@ -20,7 +20,7 @@
 </head>
 <body>
 	<center style="width: 100%; padding-top: 2rem;">
-        <div style="max-width: 600px; margin: 0 auto; overflow: hidden; background-color: #88ccdc; background-image: linear-gradient(#f9e3c2, #88ccdc);">
+        <div style="max-width: 600px; margin: 0 auto; overflow: hidden; background: linear-gradient(180deg, rgb(255 255 255 / 90%) 29%, rgb(135 128 152 / 80%) 84%, rgb(64 87 115 / 90%) 100%);">
             <table align="center" role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="margin: auto;">
                 <tbody>
                     <tr>
@@ -29,7 +29,7 @@
                                 <tbody>
                                     <tr>
                                         <td class="logo" style="text-align: center;">
-                                            <h1><a href="http://fasadni.by/"><img src="data:image/png;base64, <%= image %>" width="150" height="150" border="0" /></a></h1>
+                                            <h1><a href="http://fasadni.by/"><img style="margin-top: 30px;" src="data:image/png;base64, <%= image %>" width="150" height="40" border="0" /></a></h1>
                                         </td>
                                     </tr>
                                 </tbody>
