--- a/emails/admin/html.ejs
+++ b/emails/admin/html.ejs
@@ -5,22 +5,10 @@
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="x-apple-disable-message-reformatting">
-	<style>
-		p a {
-			color: #000000;
-			font-size: 20px;
-			font-weight: 700;
-			text-transform: uppercase;
-			font-family: 'Lato', sans-serif;
-			border: 2px solid #000;
-			padding: .2em 1em;
-			text-decoration: none;
-        }
-	</style>
 </head>
 <body>
 	<center style="width: 100%; padding-top: 2rem;">
-        <div style="max-width: 600px; margin: 0 auto; overflow: hidden; background-color: #88ccdc; background-image: linear-gradient(#f9e3c2, #88ccdc);">
+        <div style="max-width: 600px; margin: 0 auto; overflow: hidden; background: linear-gradient(180deg, rgb(255 255 255 / 90%) 29%, rgb(135 128 152 / 80%) 84%, rgb(64 87 115 / 90%) 100%);">
             <table align="center" role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="margin: auto;">
                 <tbody>
                     <tr>
@@ -29,7 +17,7 @@
                                 <tbody>
                                     <tr>
                                         <td class="logo" style="text-align: center;">
-                                            <h1><a href="http://fasadni.by/"><img src="data:image/png;base64, <%= image %>" width="150" height="150" border="0" /></a></h1>
+                                            <h1><a href="http://fasadni.by/"><img style="margin: 10px 0 20px 0;" src="data:image/png;base64, <%= image %>" width="150" height="40" border="0" /></a></h1>
                                         </td>
                                     </tr>
                                 </tbody>
@@ -43,10 +31,9 @@
                                     <tr>
                                         <td>
                                             <div class="text" style="padding: 0 2.5em; text-align: center;">
-                                                <h2>Потенциальный клиент воспользвался формой обратной связи</h2>
+                                                <h2 style="max-width: 300px; color: black;">Потенциальный клиент воспользвался формой обратной связи</h2>
                                                 <br>
-                                                <br>
-                                                <p>
+                                                <p style="max-width: 300px; color: black;">
                                                     <%= data %>
                                                 </p>
                                             </div>
