--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,80 +8,132 @@
 		<meta name="MobileOptimized" content="width" />
 		<meta name="HandheldFriendly" content="true" />
 
-		<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-		
-		
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.1/css/all.css">
+        <link rel="stylesheet" href="dist/css/bootstrap.min.css">
 
-		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+		<script type="text/javascript" src="dist/js/bootstrap.min.js"></script>	
+        
+        <style>
+            .validate-input {
+                position: relative;
+            }
+            
+            .alert-validate::before {
+                content: attr(data-validate);
+                position: absolute;
+                z-index: 100;
+                max-width: 70%;
+                background-color: #fff;
+                border: 1px solid #c80000;
+                border-radius: 14px;
+                padding: 4px 15px 4px 10px;
+                top: 50%;
+                -webkit-transform: translateY(-50%);
+                transform: translateY(-50%);
+                right: 10px;
+                pointer-events: none;
+                color: #c80000;
+                font-size: 13px;
+                text-align: left;  
+                visibility: hidden;
+                opacity: 0;
+                transition: 0.5s;
+            }
+            
+            .alert-validate::after {
+                content: '\f12a';
+                font-family: 'Font Awesome 5 Free';
+                font-weight: bold;
+                display: block;
+                position: absolute;
+                z-index: 110;
+                color: #c80000;
+                top: 50%;
+                -webkit-transform: translateY(-50%);
+                transform: translateY(-50%);
+                right: 16px;
+            }
+            
+            .alert-validate:hover:before {
+                visibility: visible;
+                opacity: 1;
+            }
+        </style>
 	</head>
 	<body>
-		<div class="m-5 form-group d-flex justify-content-center" id="form">
-			<form class="" action="/admin" method="POST">
-				<div class="m-2 d-flex justify-content-center">
-					Log In
-				</div>
-				<div class="m-2" data-validate="Введите login">
-					<input class="form-control" type="text" name="login" id="login" placeholder="login">
-				</div>			
-				<div class="m-2" data-validate = "Введите пароль">
-					<input class="form-control" type="password" id="pass" name="pass" placeholder="password">
-				</div>	
-				<div class="m-2 d-flex justify-content-center">
-					<button type="submit" class="btn btn-outline-success">
-						<span>
-							<i class="fab fa-telegram-plane"></i>
-							Отправить
-						</span>
-					</button>
-				</div>
-			</form>
-		</div>
+        <div class="col-12">
+            <div class="m-5 form-group d-flex justify-content-center" id="form">
+                <form style="min-width: 300px;" id="login-form" class="" action="/admin" method="POST">
+                    <div class="m-2 d-flex justify-content-center">
+                        Войти
+                    </div>
+                    <div class="m-3 position-relative" data-validate="Введите login">
+                        <input class="form-control" type="text" name="login" id="login" placeholder="login">
+                    </div>			
+                    <div class="m-3 position-relative" data-validate = "Введите пароль">
+                        <input class="form-control" type="password" name="pass" id="pass" placeholder="password">
+                    </div>	
+                    <div class="m-3 d-flex justify-content-center">
+                        <button type="submit" class="btn btn-outline-success">
+                            <span>
+                                <i class="fab fa-telegram-plane"></i>
+                                Отправить
+                            </span>
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <script>
+            (() => {
+                "use strict";
+                var form = document.getElementById('login-form');
+                var inputs = Array.from(document.querySelectorAll('.form-control'));
 
-	<script>
-		(function ($) {
-			"use strict";
-			var input = $('.validate-input .input100');
-			$('.validate-form').on('submit',function(){
-				var check = true;
+                inputs.forEach(input => {
+                    input.onfocus = onfocus;
+                });
 
-				for(var i=0; i<input.length; i++) {
-					if(validate(input[i]) == false){
-						showValidate(input[i]);
-						check=false;
-					}
-				}
+                form.onsubmit = onsubmit;
 
-				return check;
-			});
-			
-			$('.validate-form .input100').each(function(){
-				$(this).focus(function(){
-				hideValidate(this);
-				});
-			});
+                function onsubmit(e) {
+                    let check = true;
+                    inputs.forEach(input => {
+                        if (validate(input) == false) {
+                            showValidate(input);
+                            check = false;
+                        }
+                    });
+                    return check;
+                }
 
-			function validate (input) {
-				if($(input).val().trim() == ''){
-					return false;
-				}
-			}
+                function onfocus(e) {
+                    hideValidate(e.target);
+                };
 
-			function showValidate(input) {
-				var thisAlert = $(input).parent();
+                function validate(input) {
+                    if(input.getAttribute('type') == 'email' || input.getAttribute('name') == 'email') {
+                        if(input.value.trim().match(/^([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{1,5}|[0-9]{1,3})(\]?)$/) == null) {
+                            return false;
+                        }
+                    }
+                    else {
+                        if(input.value.trim() == ''){
+                            return false;
+                        }
+                    }
+                }
 
-				$(thisAlert).addClass('alert-validate');
-			}
+                function showValidate(input) {
+                    let thisAlert = input.parentNode;
+                    thisAlert.classList.add('alert-validate');
+                }
 
-			function hideValidate(input) {
-				var thisAlert = $(input).parent();
-
-				$(thisAlert).removeClass('alert-validate');
-			}
-		})(jQuery);
-	</script>
+                function hideValidate(input) {
+                    let thisAlert = input.parentNode;
+                    thisAlert.classList.remove('alert-validate');
+                }
+            })();
+        </script>
 	</body>
 </html>
