--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -64,7 +64,7 @@
                                     <td><a class = "edit-cread btn btn-outline-warning">Редактировать</a></td>
                                 </tr>
                             </table>
-                            <input id="save-cred" type="submit" value="Сохранить" class = "btn btn-outline-secondary" disabled="disabled">
+                            <input id="save-cred" type="submit" value="Сохранить" class="btn btn-outline-secondary" disabled="disabled">
                         </form>
                     </div>
                 </div>
@@ -90,27 +90,47 @@
                         </table>
                     </div>
                     
-                    <form encType="multipart/form-data" action="/admin/addProject" class="m-1 hid" id="addProj" method="POST">
+                    <form encType="multipart/form-data" action="/admin/add-project" class="m-1 hid" id="add-project-form" method="POST">
                         <div class="row mt-5">
-                            <div class="col-12 mt-1 col-lg-6" data-validate = "Введите название проекта">
-                                <input type="text" name="name" class="inpt form-control" placeholder="Название проекта">
+                            <div class="col-12 mt-2" data-validate="Введите название проекта">
+                                <input type="text" name="name" class="add-project inpt form-control" placeholder="Название проекта">
                             </div>
-                            <div class="col-12 mt-1 ml-1 col-lg-5 custom-file" data-validate="Выберите фото">
-                                <input type="file" name="photo" multiple class="inpt photo custom-file-input" id="bc">
-                                <label class="custom-file-label" for="bc">Фото</label>
+                            <div class="col-12 mt-3 custom-file" data-validate="Выберите фото">
+                                <label for="photos" class="form-label">Фото проекта</label>
+                                <input class="add-project form-control" type="file"  name="photos" id="photos" multiple>
                             </div>
-                            <div class="col-11 mt-2">
-                                <textarea rows="6" class="form-control" name="description" placeholder="Описание проекта"></textarea>
+                            <div class="col-12 mt-3 custom-file" data-validate="Выберите видео">
+                                <label for="videos" class="form-label">Видео проекта</label>
+                                <input class="add-project form-control" type="file"  name="videos" id="videos" multiple>
                             </div>
-                            <div class="col-11 mt-2">
-                                <textarea rows="6" class="form-control" name="alt" placeholder="Описание изображений"></textarea>
+                            <div class="col-12 mt-4">
+                                <textarea rows="6" class="add-project form-control" name="description" placeholder="Описание проекта"></textarea>
                             </div>
                         </div>
-                        <input type="submit" value="Сохранить" class ="m-3 btn btn-outline-success">
+                        <input id="submmit-project" type="submit" value="Сохранить" class ="m-3 btn btn-outline-secondary" disabled="disabled">
                     </form>
                     
                     <div class="m-5 d-flex justify-content-center">
-                        <button class = "btn btn-outline-success">Добавить проект</button>
+                        <button id="add-project" class="btn btn-outline-success">Добавить проект</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="warning-modal" tabindex="-1" aria-labelledby="warning-modal-title" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="warning-modal-title">Внимание</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div id="warning-modal-body" class="modal-body">
+                        Поддерживаемые форматы для фото: 'JPEG', 'JPG', 'PNG', 'GIF', 'SVG<br>
+                        Поддерживаемые форматы для видео: 'MP4', 'M4P', 'M4V', 'GIF', 'MPG', 'MPEG', 'MPV', 'MP2', 'AVI', 'WMV' <br>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
                     </div>
                 </div>
             </div>
