--- a/views/partials/about.ejs
+++ b/views/partials/about.ejs
@@ -1,27 +1,19 @@
 <div class="container mb-5">
-    <div class="text-center">
+    <div class="text-center mb-3">
         <h3>О нашей компании</h3>
     </div>
+
     <p>
-        <b>
-            Французы считают, что если в доме все сделано, можно и спокойно умирать. 
-            Однако, многим среди наших соотечественников подобная участь не страшна, так как ремонт 
-            в квартире даже небольшой площади зачастую превращается в некую эстафету от старшего поколения младшему...
-        </b>
+        Мы более 15 лет занимаемся строительными услугами, делая акцент на <strong>дизайнерские ремонты</strong> b <strong>ремонты под ключ</strong>.
+        <br>
+        Из-за того, что все виды работ осуществляются специалистами одной компании, ремонт будет проходить без простоев и качественно.
+        <br> Только так мы можем гарантировать сроки и <strong>наивысшее качество ремонта</strong>.
     </p>
 
     <p>
-        Ремонт нужно делать, чтобы жить, а не жить, чтобы делать ремонт! Пока есть люди, согласные с этой истиной, 
-        будет актуальна и услуга ремонт под ключ.
+        Никакая экономия не стоит ваших нервов, споров и дискомфорта!
     </p>
-
-    <p>
-        За более чем 17 лет работы нами накоплен целый арсенал историй и ситуаций, 
-        связанных с ремонтами, выполняемыми силами семьи. И, как бы забавно это не звучало, 
-        все они так или иначе сводятся к тому, что в ремонте самое главное не развестись… Никакая 
-        экономия не стоит ваших нервов, споров и дискомфорта!
-    </p>
-    <div class="text-center">
+    <div class="text-center mb-3">
         <h3>Ваш ремонт начинается со звонка нам!</h3>
     </div>
     <p>
@@ -30,25 +22,5 @@
         специалистов показала свою высокую подготовку, квалификацию, профессионализм 
         и ответственность. Об этом свидетельствуют объемное портфолио выполненных 
         работ и многочисленные положительные отзывы.
-    </p>
-
-    <p>
-        Многие наши заказчики нашли нас благодаря рекомендациям довольных клиентов. 
-        Немало проектов поступает и от людей, с которыми мы ранее уже сотрудничали. И это весьма показательно!
-    </p>
-
-    <p>
-        В нашей команде нет слабых звеньев! Мы несем солидарную ответственность за качество всех выполняемых работ, 
-        будь то косметический ремонт квартиры, 
-        евроремонт офиса или же капитальная отделка нежилого помещения.
-    </p>
-    <p>
-        Нет в нашей компании и раздутого штата со множеством руководящих звеньев, 
-        на содержание которого требуются немалые ресурсы. Каждый наш специалист в 
-        совершенстве владеет несколькими рабочими специальностями (как правило, из смежных областей), 
-        досконально разбираясь в нормативных требованиях, специфике производственных процессов, 
-        оборудования и современных материалов. Такой совокупный профессиональный опыт позволяет 
-        нашей команде обходиться без посредников, что в свою очередь дает возможность формировать 
-        собственные лояльные расценки на все группы работ, в том числе на ремонт под ключ жилых и нежилых объектов.
     </p>
 </div>
