--- a/views/partials/main.ejs
+++ b/views/partials/main.ejs
@@ -1,93 +1,64 @@
 <div class="col-12 p-2 container">
-    <h3>Ремонт квартиры за разумные деньги!</h3>
+    <h3>Почему лучше заказывать ремонт квартиры ,дома под ключ</h3>
 
     <p>
-        Любой из нас желает только лучшего для себя и своей семьи. 
-        По мнению психологов, гармония жизни человека напрямую связана 
-        с его окружающим пространством. Поэтому, желая что-то менять в лучшую сторону, 
-        следует начинать совершенствовать интерьер своего жилища, а также офиса, — сменить 
-        устаревший дизайн, вдохнуть в родные квадратные метры вторую жизнь. Но, как обычно это бывает, 
-        рассчитывая только лишь на свои знания и навыки, мы обязательно сталкиваемся с тем фактом, 
-        что в каждом деле так или иначе требуется профессиональный подход.
+        Неважно, какой площади квартира. И совершено не имеет значения, сколько в этой недвижимости, 
+        присутствует комнат. Когда возникает решение провести в ней <strong>ремонт</strong>, всегда приходится 
+        быть готовым не лишь к финансовым расходам, но и потери колоссального количества 
+        времени и сил. Собственно из-за этих особенностей, присутствующих в 
+        любом виде ремонта жилья. Многие люди после непродолжительных размышлений,
+         приходят к выводу, что проще найти команду специалистов, готовых взять 
+         на себя все ремонтные заботы, и выполнить их без вмешательства в этот процесс владельца жилья.
     </p>
     <p>
-        Наш коллектив рад предложить вам <strong>ремонт в новостройке</strong>, 
-        коттедже и на рабочих площадях в комфортные сроки и за разумные деньги. 
-        Поручив нам выполнение всех необходимых задач, вы участвуете в проекте, лишь 
-        утверждая финишные варианты отделки и значимые изменения в интерьерном пространстве, — 
-        все остальное мы берем на себя!
+        Конечно, разыскивая <strong>ремонт квартир</strong> <strong>под ключ</strong> 
+        <strong>в Минске</strong> <strong>недорого</strong>, 
+        желательно брать во внимание длительность существования компании 
+        и уровень ее репутации. Ведь на плечи мастеров будут ложиться буквально <strong>все виды работ</strong>. 
+        И это действительно так, ведь преимуществом таких работ, выполняемых под ключ, является избавление 
+        с помощью этой услуги от всех хлопот, связанных с ремонтом квартиры. 
+        А вот владельцу, после выбора такой услуги, остаются лишь расходы, 
+        связанные с покупкой материалов, и выполнением услуг специалистами.
     </p>
     
-    <h4>Как выбрать мастеров для ремонта квартиры в Минске?</h4>
+    <h3>Подробнее о преимуществах ремонта под ключ</h3>
     
     <p>
-        При выборе мастеров для ремонта наиглавнейшим критерием 
-        будет являться соотношение цены и качества. Только после этого можно 
-        рассматривать второстепенные моменты — скорость работы, наличие гарантии и ряд других моментов.
+        Все организации, предоставляющие такие виды услуг, всегда имеют в наличии мастеров, 
+        широкого профиля. Так, что все виды работ, специалистами всегда выполняется <strong>качественно</strong> и <strong>быстро</strong>. 
+        Процесс поиска и закупки материала, также осуществляются специалистами компании. 
+        Все что требует от клиента, это рассказать, о результате, который он ожидает в итоге получить.
     </p>    
     <p>
-        Наш коллектив отличает высокий уровень профессионализма, завязанный на основательном опыте выполнения 
-        самых различных видов работ. Каждый из наших мастеров владеет несколькими специальностями, 
-        что существенно экономит время заказчика. Мы самым внимательным образом выполняем комплексный 
-        ремонт квартиры, чутко относимся к пожеланиям заказчика и всегда готовы согласовать те или иные действия, 
-        решения в рамках выполнения вашего проекта.
-    </p>
-
-    <h5>Особенности выбора стройматериалов</h5>
-    
-    <p>
-        Наш коллектив позаботится о том, чтобы все ваши вложения в ремонт окупились 
-        в последствии качеством как используемых материалов, так и работ, а также 
-        их долговечностью. Мы предлагаем своим заказчикам осуществить совместную 
-        закупку необходимых ресурсов, а также выполнить доставку и поднять материал на объект.
-    </p>
-    
-    <h6>Почему выбирают нас?</h6>
-    
-    <p>
-        <strong>Ремонт квартир в Минске</strong> — направление, которым мы занимаемся не один год.
-        В портфолио на нашем сайте представлены фото объектов, отремонтированных нашими мастерами.
-    </p>
-    
-    <p>
-        Высокое качество производимых нами работ складывается из множества факторов. 
-        Это и наличие необходимого опыта, и профессиональный подход даже к незначительным 
-        задачам, понимание всех нюансов процесса с соблюдением необходимых норм, а также 
-        использование современного оборудования и инструментов. Наше мастерство подтверждают 
-        многочисленные положительные отзывы довольных клиентов.
-    </p>
-    <p>
-        Связаться с нами для уточнения возникших вопросов, оформить заявку на наши 
-        услуги вы можете, позвонив по представленным на сайте телефонам (контакты) 
-        или отправив запрос через специальную форму.
+        Из-за того, что <strong>все виды работ</strong>, осуществляться будут специалистами одной компании. 
+        Весь этот процесс будет проходить слажено и без каких-либо неприятных простоев. 
+        Конечно, у такой услуги, предоставляемой строительными компаниями, есть недостаток, 
+        и касается он цены. Да, можно найти определенные виды услуг <strong>по меньшей стоимости</strong> 
+        в других организациях, чем предоставляется той, что выполняет все работы самостоятельно. 
+        Но заплатив такую стоимость <strong>ремонта квартиры под ключ в Минске</strong>, 
+        клиент может не сомневаться в качественности выполненных работ. Ведь мы за работу 
+        каждого специалиста берём на себя ответственность. А это означает, что, не желая портить 
+        свою репутацию, мы контролируем практически каждый этап работ.
     </p>
     <div class="projects">
-        <div class="text-center">
+        <div class="text-center mb-3">
             <h3>Нашт проекты</h3>
         </div>
         <div class="box">
-            <div class="project pr-effect">
-                <div class="title pr-effect" style="opacity: 0.6;">
-                    <a class="button secondary pr-effect" style="color: black;">
-                        <i class="fas fa-eye jump pr-effect" style="padding-right: 10px;"></i>
-                        Смотреть альбом
-                    </a>
-                </div>
-                <a id="1" class="link pr-effect" style="opacity: 1;">
-                    <img class="img pr-effect" src="/images/main-background.jpg" style="transform: scale(1);">
-                </a>
-            </div>
-            <div class="project pr-effect">
-                <div class="title pr-effect" style="opacity: 0.6;">
-                    <a class="button secondary pr-effect" style="color: black;">
-                        <i class="fas fa-eye jump pr-effect" style="padding-right: 10px;"></i>
-                        Смотреть альбом
-                    </a>
-                </div>
-                <a id="Тестовы проект" class="link pr-effect" style="opacity: 1;">
-                    <img class="img pr-effect" src="/images/main-background.jpg" style="transform: scale(1);">
-                </a>
-            </div>
+            <% for(let i = 0; i < data.projects.length; i++) { %>
+                <% if (i < 2) {%>
+                    <div data-name="<%- data.projects[i].dirname %>" class="project pr-effect">
+                        <div class="title pr-effect" style="opacity: 0.6;">
+                            <a class="button secondary pr-effect" style="color: black;">
+                                <i class="fas fa-eye jump pr-effect" style="padding-right: 10px;"></i>
+                                Смотреть альбом
+                            </a>
+                        </div>
+                        <a class="link pr-effect" style="opacity: 1;">
+                            <img class="img pr-effect" alt="<%- data.projects[i].description %>" src="<%- data.projects[i].images[0] %>" style="transform: scale(1);">
+                        </a>
+                    </div>
+                <% }}%>
         </div>
         <div class="text-center pb-5">
             <a class="button primary ajax" href="/projects">Смотреть все</a>
