--- a/views/partials/projects.ejs
+++ b/views/partials/projects.ejs
@@ -1,44 +1,30 @@
 <div class="container mb-5">
-    <div class="text-center">
+    <div class="text-center mb-3">
         <h3>Галерея</h3>
     </div>
     <div class="m-0 p-5 pb-0">
         <p>
-            Фотографии ремонтов квартир и других помещений, выполненных нашим коллективом
+            Фотографии и видео ремонтов квартир и других помещений, выполненных нашим коллективом
         </p>
     </div>
     <div class="projects">
         <div class="box full-info">
-            <div class="project pr-effect" data-name="1">
-                <div class="title pr-effect" style="opacity: 0.6;">
-                    <a class="button secondary pr-effect" style="color: black;">
-                        <i class="fas fa-eye jump pr-effect" style="padding-right: 10px;"></i>
-                        Смотреть альбом
-                    </a>
-                </div>
-                <a class="link pr-effect" style="opacity: 1;">
-                    <img class="img pr-effect" src="/images/main-background.jpg" style="transform: scale(1);">
-                </a>
-                <p class="description pr-effect" style="opacity: 0;">
-                    Ремонт кухни под ключ. Шпатлевка стен. Облицовка пола плиткой. Поклейка обоев. Монтаж натяжного потолка. Установка двери.
-                    Ремонт кухни под ключ. Шпатлевка стен. Облицовка пола плиткой. Поклейка обоев. Монтаж натяжного потолка. Установка двери.
-                    Ремонт кухни под ключ. Шпатлевка стен. Облицовка пола плиткой. Поклейка обоев. Монтаж натяжного потолка. Установка двери.
-                </p>
-            </div>
-            <div class="project pr-effect" data-name="1">
-                <div class="title pr-effect" style="opacity: 0.6;">
-                    <a class="button secondary pr-effect" style="color: black;">
-                        <i class="fas fa-eye jump pr-effect" style="padding-right: 10px;"></i>
-                        Смотреть альбом
-                    </a>
-                </div>
-                <a class="link pr-effect" style="opacity: 1;">
-                    <img class="img pr-effect" src="/images/main-background.jpg" style="transform: scale(1);">
-                </a>
-                <p class="description pr-effect" style="opacity: 0;">
-                    Ремонт кухни под ключ. Шпатлевка стен. Облицовка пола плиткой. Поклейка обоев. Монтаж натяжного потолка. Установка двери.
-                </p>
-            </div>
+            <% for(let i = 0; i < data.projects.length; i++) { %>
+                    <div data-name="<%- data.projects[i].dirname %>" class="project pr-effect">
+                        <div class="title pr-effect" style="opacity: 0.6;">
+                            <a class="button secondary pr-effect" style="color: black;">
+                                <i class="fas fa-eye jump pr-effect" style="padding-right: 10px;"></i>
+                                Смотреть альбом
+                            </a>
+                        </div>
+                        <a class="link pr-effect" style="opacity: 1;">
+                            <img class="img pr-effect" alt="<%- data.projects[i].description %>" src="<%- data.projects[i].images[0] %>" style="transform: scale(1);">
+                        </a>
+                        <p class="description pr-effect" style="opacity: 0;">
+                            <%- data.projects[i].description %>
+                        </p>
+                    </div>
+            <% }%>
         </div>
     </div>
 </div>
