--- a/views/partials/repair-flat.ejs
+++ b/views/partials/repair-flat.ejs
@@ -1,25 +1,20 @@
 <div class="container mb-5">
-    <div class="text-center">
-        <h3> Ремонт квартир под ключ</h3>
+    <div class="text-center mb-3">
+        <h3>Для чего нужен дизайн-проект квартиры и стоит ли нанимать профессионального дизайнера?</h3>
     </div>
     <p>
-        Большинство строительных организаций предпочитают выполнение заказов на строительство и 
-        отказываются от работ по ремонту квартир. Объяснение простое: строительные объемы выполнять 
-        проще и стоят они больше, тогда как <strong>ремонт квартир</strong> не предполагает большого заработка.
+        Существует стереотип, что услугами дизайнера интерьера пользуются только состоятельные люди 
+        или не имеющие фантазии, чтобы оформить собственное жилье. На самом деле за помощью к 
+        профессионалам прибегают многие независимо от финансового состояния и степени креативного мышления.
     </p>
     <p>
-        В отличие от подрядных строительных организаций мы выполняем такую работу 
-        регулярно и накопили за прошедшее десятилетие огромный объем опыта. Каждый член 
-        нашего коллектива за прошедшие годы освоил дополнительно к основной две-три другие 
-        профессии. Это даёт нам возможность гарантировать заказчику качественную работу с 
-        обязательным соблюдением оговоренных сроков окончания работ и с большой вероятностью 
-        досрочного выполнения всего намеченного объема.
+        Не имея профессионального дизайнерского образования, невозможно учесть все моменты, 
+        в отношении эстетики, функциональности, удобства и эргономичности. 
+        Самоучки часто совершают ошибки, которые приходится переделывать, что требует дополнительного времени и средств.
     </p>
     <p>
-        Наш коллектив способен выполнить этот заказ, расценки будут значительно меньше 
-        тех, что назначаются строительными организациями, так как нам не нужно оплачивать 
-        труд мастеров, прорабов, сметчиков и других инженерно-технических сотрудников, 
-        входящих в штаты ремонтно-строительных организаций. Мы сами способны обсчитать 
-        объем предстоящих ремонтных работ, составить юридически грамотный договор и выполнить 
+        <strong>Дизайн интерьера</strong> – это больше, чем просто <strong>выбрать цвет обоев</strong> 
+         или <strong>подобрать плитку в ванную</strong>. 
+        Нужно продумать все, начиная от <strong>монтажных работ</strong> до расстановки мебели и декора.
     </p>
 </div>
