--- a/views/partials/repair-house.ejs
+++ b/views/partials/repair-house.ejs
@@ -1,25 +1,33 @@
 <div class="container mb-5">
-    <div class="text-center">
-        <h3> Ремонт домов под ключ в Минске </h3>
+    <div class="text-center mb-3">
+        <h3>Ремонт под ключ</h3>
     </div>
     <p>
-        Большинство строительных организаций предпочитают выполнение заказов на строительство и 
-        отказываются от работ по ремонту квартир. Объяснение простое: строительные объемы выполнять 
-        проще и стоят они больше, тогда как <strong>ремонт квартир</strong> не предполагает большого заработка.
+        <strong>Ремонт квартир под ключ</strong> становится все более востребованным, так как имеет такие преимущества:
     </p>
-    <p>
-        В отличие от подрядных строительных организаций мы выполняем такую работу 
-        регулярно и накопили за прошедшее десятилетие огромный объем опыта. Каждый член 
-        нашего коллектива за прошедшие годы освоил дополнительно к основной две-три другие 
-        профессии. Это даёт нам возможность гарантировать заказчику качественную работу с 
-        обязательным соблюдением оговоренных сроков окончания работ и с большой вероятностью 
-        досрочного выполнения всего намеченного объема.
-    </p>
-    <p>
-        Наш коллектив способен выполнить этот заказ, расценки будут значительно меньше 
-        тех, что назначаются строительными организациями, так как нам не нужно оплачивать 
-        труд мастеров, прорабов, сметчиков и других инженерно-технических сотрудников, 
-        входящих в штаты ремонтно-строительных организаций. Мы сами способны обсчитать 
-        объем предстоящих ремонтных работ, составить юридически грамотный договор и выполнить 
+    <ul>
+        <li class="pt-2">
+            Одна компания выполняет <strong>все виды работ</strong>, именно поэтому вам не нужно искать каждого 
+            специалиста по отдельности. За счет этого хлопот во время ремонта будет меньше;
+        </li>
+        <li class="pt-2">
+            Стоимость ремонта также становится гораздо меньше;
+        </li>
+        <li class="pt-2">
+            Время ремонта сокращается, так как этапы работы делаются последовательно и без остановок (если они не требуются);
+        </li>
+        <li class="pt-2">
+            Если после окончания ремонта вы заметили какие-либо недочеты, то искать виновного станет 
+            намного проще. То есть, виновен будет только подрядчик, который занимался ремонтом полностью. 
+            Если вы обращаетесь в разные компании, то найти крайнего будет очень сложно;
+        </li>
+        <li class="pt-2">
+            <strong>Проектирование и ремонт</strong> обязательно полностью согласовывается с компанией, которая будет 
+            заниматься ремонтом. Хорошая бригада учтет все ваши пожелания, также контролировать процесс 
+            будет намного легче, а также вносить изменения;
+        </li>
+    </ul>
+    <p class="pt-3">
+        <strong>Простой в ремонте</strong>, таким образом, вы сведете до минимума.
     </p>
 </div>
