--- a/emails/admin/html.ejs
+++ b/emails/admin/html.ejs
@@ -17,7 +17,7 @@
                                 <tbody>
                                     <tr>
                                         <td class="logo" style="text-align: center;">
-                                            <h1><a href="http://fasadni.by/"><img style="margin: 10px 0 20px 0;" src="data:image/png;base64, <%= image %>" width="150" height="40" border="0" /></a></h1>
+                                            <h1><a href="https://vash-remont.by/"><img style="margin: 10px 0 20px 0;" src="data:image/png;base64, <%= image %>" width="150" height="40" border="0" /></a></h1>
                                         </td>
                                     </tr>
                                 </tbody>
