--- a/emails/templates/html.ejs
+++ b/emails/templates/html.ejs
@@ -29,7 +29,7 @@
                                 <tbody>
                                     <tr>
                                         <td class="logo" style="text-align: center;">
-                                            <h1><a href="http://fasadni.by/"><img style="margin-top: 30px;" src="data:image/png;base64, <%= image %>" width="150" height="40" border="0" /></a></h1>
+                                            <h1><a href="https://vash-remont.by/"><img style="margin-top: 30px;" src="data:image/png;base64, <%= image %>" width="150" height="40" border="0" /></a></h1>
                                         </td>
                                     </tr>
                                 </tbody>
@@ -71,7 +71,7 @@
                 <tbody>
                     <tr>
                         <td style="text-align: center;">
-                            <p><a target="_blank" href="http://fasadni.by/">ИП 72245</a></p>
+                            <p><a target="_blank" href="https://vash-remont.by/">ИП Еремеев Д.В.</a></p>
                         </td>
                     </tr>
                     <tr>
@@ -85,8 +85,8 @@
                         <td style="text-align: center;">
                             <span>
                                 <p>
-                                    <a class="tel" target="_blank" href="tel:+375297711977">
-                                        <span class="text"><tel>+375297711977</tel></span>
+                                    <a class="tel" target="_blank" href="tel:+375 29 243 8148">
+                                        <span class="text"><tel>+375 29 243 8148</tel></span>
                                     </a>
                                 </p>
                             </span>
