--- a/views/layout/_footer.ejs
+++ b/views/layout/_footer.ejs
@@ -6,7 +6,8 @@
             <a class="brand" href=""><img style="filter: drop-shadow(0px 0px 6px black);" class="logo" border="0" alt="логоип дизайнерский ремонт под ключ" src="images/logo.svg"></a>
         </div>
         <p class="copyright p-3">
-            "Ремонт Под Ключ" – дизайн интерьеров, строительство, ремонт и отделка квартир, домов, офисов и других коммерческих помещений.
+            "Ремонт Под Ключ" – дизайн интерьеров, строительство, ремонт и отделка квартир, домов, офисов и других коммерческих помещений. <br>
+            ИП Еремеев Д.В. УНП 790514263
         </p>
         <p class="privacy p-3">
             © <%- new Date().getFullYear() %>. Все права защищены. Вся информация, изложенная на сайте,
@@ -20,9 +21,8 @@
         <h5 class="text-center  p-3">Главное меню</h5>
         <div class="p-4 d-flex flex-column">
             <a class="item ajax" href="/index">Главная</a>
-            <a class="item ajax" href="/repair-flat">Дизайнерский ремонт Квартир</a>
-            <a class="item ajax" href="/repair-house">Дизайнерский ремонт Домов</a>
-            <a class="item ajax" href="/repair-estate">Дизайнерский ремонт Комерчиской недвижемости</a>
+            <a class="item ajax" href="/repair-flat">Дизайнерский ремонт</a>
+            <a class="item ajax" href="/repair-house">Ремонт под ключ</a>
             <a class="item ajax" href="/projects">Галерея</a>
             <a class="item ajax" href="/about">О нас</a>
         </div>
@@ -30,9 +30,9 @@
     <div class="col-lg-3 col-12 d-flex flex-column flex-lg-column flex-sm-column flex-md-row">
         <div class="footer-contact p-3">
             <div class="mb-3">
-                <a class="button primary" href="tel:45645645">
+                <a class="button primary" href="tel:<%-data.phone%>">
                     <i class="fas fa-phone jump" style="padding-right: 10px;"></i>
-                    45645654
+                    <%-data.phone%>
                 </a>
             </div>
             <div class="mb-3">
@@ -42,16 +42,14 @@
                 </a>
             </div>
             <div class="mb-3">
-                <a class="button secondary" href="#contact">
+                <a class="button secondary" href="mailto:<%-data.email%>">
                     <i class="fas fa-envelope jump" style="padding-right: 10px;"></i>
-                    my-sita@info.ru
+                    <%-data.email%>
                 </a>
             </div>
         </div> 
         <div class="footer-info p-3">
             <div>
-                <span><i class="fas fa-map-marker-alt" style="padding-right: 10px;"></i>г. Минск, Пушкина / 64</span>
-            </div><div>
                 <span>Консультации</span> 
                 <p>Ежедневно <br>с 9:00 до 20:00</p>
             </div>
